# lady

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  PLAN.md  README.md  deny.toml  progress.txt
.claude/skills/run-ralph/: SKILL.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
crates/lady-ai/: Cargo.toml
crates/lady-ai/src/: context.rs  lib.rs  prompts.rs
crates/lady-ai/src/providers/: anthropic.rs  azure.rs  gemini.rs  mistral.rs  mod.rs  ollama.rs  openai.rs
crates/lady-cli/: Cargo.toml
crates/lady-cli/src/: lib.rs  main.rs
crates/lady-cli/tests/: end_to_end.rs
crates/lady-diff/: Cargo.toml
crates/lady-diff/benches/: diff.rs
crates/lady-diff/src/: lib.rs  merge.rs
crates/lady-fixtures/: Cargo.toml
crates/lady-fixtures/src/: lib.rs
crates/lady-git/: Cargo.toml
crates/lady-git/benches/: repo_ops.rs
crates/lady-git/src/: custom.rs  lib.rs
crates/lady-git/tests/integration/: basic_ops.rs  branch_merge.rs  conflicts.rs  mod.rs  worktrees.rs
crates/lady-graph/: Cargo.toml
crates/lady-graph/benches/: layout.rs
crates/lady-graph/src/: lib.rs
crates/lady-hosting/: Cargo.toml
crates/lady-hosting/src/: azure.rs  bitbucket.rs  github.rs  gitlab.rs  lib.rs
crates/lady-license/: Cargo.toml
crates/lady-license/src/: lib.rs
crates/lady-mcp/: Cargo.toml
crates/lady-mcp/src/: lib.rs  main.rs
crates/lady-proto/: Cargo.toml
crates/lady-proto/src/: lib.rs
docs/: ACCESSIBILITY.md  AI-PRIVACY.md  KEYBOARD.md  MCP.md  MOBILE-PLAN.md  MOBILE.md  PACKAGING.md  PERF.md  RELEASE-CHECKLIST.md  THEMING.md  USER-GUIDE.md
docs/adr/: 0001-gui-framework-tauri.md  0002-release-at-fork-parity.md  0003-require-system-git-hybrid-engine.md  0004-closed-source-commercial.md  0005-commit-graph-canvas.md  0006-auth-and-signing-via-system-git.md  0007-licensing-gate-offline-signed-key.md  0008-ai-byok-local-ollama.md  0009-ai-privacy-explicit-opt-in.md  0010-frontend-framework-solidjs.md  0011-ai-provider-abstraction-thin-reqwest.md  0012-backend-owned-repository-family.md
docs/prd/: phase-1-read-only.json  phase-3-advanced-ship.json  phase-4-fast-follow.json  phase-5-ai.json  phase-6-polish-ship.json
docs/spikes/: semantic-commit-search.md
flatpak/: dev.lady.client.desktop  dev.lady.client.yml
plans/: 001-add-agent-executor-guide.md  002-upgrade-ui-build-chain.md  003-reconcile-release-docs.md  004-add-ui-test-coverage.md  005-split-frontend-bundle.md  006-add-tauri-csp.md  007-serialize-settings-writes.md  008-spike-semantic-commit-search.md  009-async-network-git-commands.md  010-async-heavy-read-commands.md  011-async-mutating-and-custom-commands.md  012-fix-ui-test-infrastructure.md  013-modularize-tauri-backend.md  014-add-gitengine-integration-tests.md  016-replace-unwrap-expect.md  README.md
scripts/ralph/: prd.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  lib.rs  main.rs  updater.rs  watcher.rs
src-tauri/tests/fixtures/: latest.json  latest.json.sig
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: AiSettings.tsx  AiView.tsx  AllCommitsView.tsx  App.test.tsx  App.tsx  BisectView.tsx  BlameView.tsx  BranchMenu.tsx  ChangesView.test.tsx  ChangesView.tsx  CommandPalette.test.tsx  CommandPalette.tsx  CommitDetail.tsx  CommitList.tsx  CommitMenu.tsx  CommitPlanReview.tsx  ConflictResolver.tsx  ContextMenu.tsx  CustomCommandsView.tsx  DiffView.test.ts  DiffView.tsx  ExplainPanel.tsx  FileHistory.tsx  GitFlowView.tsx  GraphView.tsx  HookErrorDialog.tsx  InteractiveRebase.tsx  LfsView.tsx  LicenseGate.tsx  NotificationsView.tsx  PullReconcileDialog.tsx  PushDialog.tsx  RecomposeView.tsx  ReflogView.tsx  RefsView.tsx  RemoteMenu.tsx  RepoBar.tsx  SettingsView.tsx  Sidebar.tsx  SignatureBadge.tsx  (+26 more)
