[workspace]
resolver = "2"
members = [
    "crates/lady-proto",
    "crates/lady-git",
    "crates/lady-cli",
    "crates/lady-graph",
    "crates/lady-diff",
    "crates/lady-hosting",
    "crates/lady-license",
    "src-tauri",
]

[workspace.package]
edition = "2021"
license = "LicenseRef-Proprietary"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
gix = { version = "0.84", default-features = false, features = [
    "max-performance-safe",
    "revision",
    "sha1",
    "blame",
    "status",
] }
tempfile = "3"
directories = "5"
toml = "0.8"
lady-proto = { path = "crates/lady-proto" }
lady-git = { path = "crates/lady-git" }
lady-graph = { path = "crates/lady-graph" }
lady-diff = { path = "crates/lady-diff" }
lady-hosting = { path = "crates/lady-hosting" }
lady-license = { path = "crates/lady-license" }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
wiremock = "0.6"
