[workspace]
resolver = "2"
members = [
    "crates/lady-proto",
    "crates/lady-git",
    "crates/lady-cli",
    "crates/lady-graph",
    "crates/lady-diff",
    "crates/lady-hosting",
    "crates/lady-license",
    "crates/lady-ai",
    "crates/lady-mcp",
    "crates/lady-fixtures",
    "src-tauri",
]

[workspace.package]
edition = "2021"
license = "LicenseRef-Proprietary"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
gix = { version = "0.84", default-features = false, features = [
    "max-performance-safe",
    "revision",
    "sha1",
    "blame",
    "status",
] }
tempfile = "3"
directories = "5"
toml = "0.8"
lady-proto = { path = "crates/lady-proto" }
lady-git = { path = "crates/lady-git" }
lady-graph = { path = "crates/lady-graph" }
lady-diff = { path = "crates/lady-diff" }
lady-hosting = { path = "crates/lady-hosting" }
lady-license = { path = "crates/lady-license" }
lady-ai = { path = "crates/lady-ai" }
lady-fixtures = { path = "crates/lady-fixtures" }
base64 = "0.22"
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
wiremock = "0.6"
tiktoken-rs = "0.6"
regex = "1"
rmcp = { version = "0.2", features = ["server", "client", "macros", "transport-io"] }
schemars = "0.8"
