[package]
name = "lady-app"
version = "1.3.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "lady"
path = "src/main.rs"

[lib]
name = "lady_app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
lady-git = { workspace = true }
lady-proto = { workspace = true }
lady-graph = { workspace = true }
lady-diff = { workspace = true }
lady-hosting = { workspace = true }
lady-license = { workspace = true }
lady-ai = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# Updater signature-verification test (PH6-008): verifies a committed signed
# manifest fixture against the committed public key, and that tampering fails.
minisign-verify = "0.2"
base64 = { workspace = true }
