[package]
name = "lady-app"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "lady"
path = "src/main.rs"

[lib]
name = "lady_app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
lady-git = { workspace = true }
lady-proto = { workspace = true }
lady-graph = { workspace = true }
lady-diff = { workspace = true }
lady-hosting = { workspace = true }
lady-license = { workspace = true }
lady-ai = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }

# The auto-updater plugin is desktop-only (no iOS/Android backend); keep it off
# the mobile build so it never compiles for those targets. Cargo can't evaluate
# Tauri's build-time `desktop` cfg here (it's set too late, during the build
# script), so gate on the real target_os instead — equivalent to `cfg(desktop)`.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = { workspace = true }
# Updater signature-verification test (PH6-008): verifies a committed signed
# manifest fixture against the committed public key, and that tampering fails.
minisign-verify = "0.2"
base64 = { workspace = true }
