[package]
name = "lady-ai"
version = "1.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "AI provider abstraction (BYOK + local Ollama), context building, token budgeting, and secret redaction for Lady (ADR-0008/0009/0011)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tiktoken-rs = { workspace = true }
regex = { workspace = true }
lady-proto = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
