[package]
name = "lady-git"
version = "1.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Git engine abstraction (GitEngine trait) over read backends (gix/git2/shell)."

[dependencies]
lady-proto = { workspace = true }
lady-diff = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
gix = { workspace = true }
tempfile = { workspace = true }
