[package]
name = "lady-hosting"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Hosting providers (GitHub at v1): auth + PR creation over reqwest/rustls."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
