[package]
name = "lady-license"
version = "0.0.5"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Offline Ed25519 license verification + trial accounting (ADR-0007)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
