[package]
name = "lady-mcp"
version = "1.3.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Read-only MCP server exposing Lady's repo context (status/diff/log/file/blame/search) to external assistants (PH5-011)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "io-std", "time", "sync"] }
rmcp = { workspace = true }
schemars = { workspace = true }
lady-git = { workspace = true }
lady-proto = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
