[package]
name = "lady-proto"
version = "1.0.0-rc"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared GUI-agnostic serde types: the UI <-> core contract."

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
